src/test/resources/json/invalid_inputs/large_start.json.except
Robot can't stand out of the room; now it's on 10, 10.